gcc/testsuite/gm2/switches/case/pass/subrangecase4.mod
MODULE subrangecase4 ;  (*!m2iso+gm2*)


TYPE
   DateRange = [1910..1920] ;


PROCEDURE init (d: DateRange) ;
BEGIN
   CASE d OF

   ELSE
   END
END init ;


VAR
   year: DateRange ;
BEGIN
   init (year)
END subrangecase4.
